# model/src/main/java/com/dwalczak/newsreader/model/ArticleFilter.java
@@ -5,6 +5,7 @@ import lombok.NoArgsConstructor;
 import lombok.experimental.Accessors;
 
 import javax.annotation.Nonnull;
+import javax.annotation.Nullable;
 
 @Data
 @Accessors(chain = true) @NoArgsConstructor
@@ -12,4 +13,5 @@ public class ArticleFilter {
     @Nonnull private String country;
     @Nonnull private String category;
     @Nonnull private PaginationFilter paginationFilter;
+    @Nullable private String searchPhrase;
 }
