# web-rs/src/main/java/com/dwalczak/newsreader/rs/api/NewsApiController.java
@@ -10,8 +10,10 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestParam;
 
 import javax.servlet.http.HttpServletRequest;
+import javax.validation.Valid;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -41,12 +43,14 @@ public class NewsApiController implements NewsApi {
     }
 
     @Override
-    public ResponseEntity<ArticleList> listArticle(@ApiParam(value = "Kod języka",required=true) @PathVariable("lang") String lang, @ApiParam(value = "Kod kategorii",required=true) @PathVariable("category") String category) {
-        com.dwalczak.newsreader.model.ArticleList articles = newsService.findArticles(ArticleFilterMapper.map(lang, category));
-        ArticleList result = new ArticleList();
-        result.setCategory(category);
-        result.setCountry("Polska");
-        result.setArticles(articles.getTotaCount() > 0 ? articles.getArticles().stream().map(ArticleMapper::map).collect(Collectors.toList()) : null);
-        return ResponseEntity.ok(result);
+    public ResponseEntity<ArticleList> listArticle(
+            @ApiParam(value = "Kod kraju",required=true) @PathVariable("country") String country,
+            @ApiParam(value = "Kod kategorii",required=true) @PathVariable("category") String category,
+            @ApiParam(value = "Nr strony (domyślna wartość 1)") @Valid @RequestParam(value = "pageNumber", required = false) Integer pageNumber,
+            @ApiParam(value = "Rozmiar strony (domyślna wartość 10)") @Valid @RequestParam(value = "pageSize", required = false) Integer pageSize,
+            @ApiParam(value = "Szukany tekst w artykułach") @Valid @RequestParam(value = "searchPhrase", required = false) String searchPhrase) {
+        com.dwalczak.newsreader.model.ArticleList articles = newsService.findArticles(
+                ArticleFilterMapper.map(country, category, pageNumber, pageSize, searchPhrase));
+        return ResponseEntity.ok(ArticleMapper.map(country, category, articles));
     }
 }
