# web-rs/src/main/java/com/dwalczak/newsreader/rs/model/ArticleList.java
@@ -28,6 +28,9 @@ public class ArticleList   {
   @Valid
   private List<Article> articles = null;
 
+  @JsonProperty("totaCount")
+  private Integer totaCount = null;
+
   public ArticleList country(String country) {
     this.country = country;
     return this;
@@ -99,6 +102,26 @@ public class ArticleList   {
     this.articles = articles;
   }
 
+  public ArticleList totaCount(Integer totaCount) {
+    this.totaCount = totaCount;
+    return this;
+  }
+
+  /**
+   * Get totaCount
+   * @return totaCount
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public Integer getTotaCount() {
+    return totaCount;
+  }
+
+  public void setTotaCount(Integer totaCount) {
+    this.totaCount = totaCount;
+  }
+
 
   @Override
   public boolean equals(java.lang.Object o) {
@@ -111,12 +134,13 @@ public class ArticleList   {
     ArticleList articleList = (ArticleList) o;
     return Objects.equals(this.country, articleList.country) &&
         Objects.equals(this.category, articleList.category) &&
-        Objects.equals(this.articles, articleList.articles);
+        Objects.equals(this.articles, articleList.articles) &&
+        Objects.equals(this.totaCount, articleList.totaCount);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(country, category, articles);
+    return Objects.hash(country, category, articles, totaCount);
   }
 
   @Override
@@ -127,6 +151,7 @@ public class ArticleList   {
     sb.append("    country: ").append(toIndentedString(country)).append("\n");
     sb.append("    category: ").append(toIndentedString(category)).append("\n");
     sb.append("    articles: ").append(toIndentedString(articles)).append("\n");
+    sb.append("    totaCount: ").append(toIndentedString(totaCount)).append("\n");
     sb.append("}");
     return sb.toString();
   }
